update the heart bottom

--- a/index.html
+++ b/index.html
@@ -13,18 +13,34 @@
         <a href="index.html" class="logo-link">
           <img src="Tag Cart Virtual Shop Logo.png" alt="Logo" class="logo">
         </a>
-      </div>
-      <div class="header-center">
         <input type="text" id="search" placeholder="Search for anything">
-        <button id="searchButton" class="header-icon">🔍</button>
+        <button id="searchButton" class="header-icon">
+          🔍
+        </button>
       </div>
       <div class="header-right">
         <button id="cartButton" class="header-icon">🛒</button>
         <button id="wishlistButton" class="header-icon">❤️</button>
+        <button id="userButton" class="header-icon">👤</button>
       </div>
     </div>
+    <div class="announcement-bar">
+      <p>Now in the app: special back-to-school deals up to 60% OFF!</p>
+    </div>
     <div class="navbar">
-      <ul class="categories" id="category-list"></ul>
+      <ul class="categories" id="category-list">
+        <li><a href="#">Beauty</a></li>
+        <li><a href="#">Fragrances</a></li>
+        <li><a href="#">Furniture</a></li>
+        <li><a href="#">Groceries</a></li>
+        <li><a href="#">Home Decoration</a></li>
+        <li><a href="#">Kitchen Accessories</a></li>
+        <li><a href="#">Laptops</a></li>
+        <li><a href="#">Men's Shirts</a></li>
+        <li><a href="#">Men's Shoes</a></li>
+        <li><a href="#">Men's Watches</a></li>
+        <li><a href="#">Mobile Accessories</a></li>
+      </ul>
     </div>
   </header>
   <main id="content">
