--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <p>Now in the app: special back-to-school deals up to 60% OFF!</p>
     </div>
     <div class="navbar">
+      <button class="categories-toggle" onclick="toggleCategories()">Categories</button>
+
       <ul class="categories" id="category-list">
         <li><a href="#">Beauty</a></li>
         <li><a href="#">Fragrances</a></li>
