update add in hompage

--- a/index.html
+++ b/index.html
@@ -101,11 +101,21 @@
     </div>
   </header>
   <main id="content">
+    
     <section class="trending">
       <h1>Check out the season's biggest trends</h1>
       <div class="trend-categories">
         <!-- Trend categories will be injected here by JavaScript -->
       </div>
+    </section>
+    <section class="carousel">
+      <div class="carousel-slide">
+        <img src="Store Sale Ad 1.png" alt="Ad 1">
+        <img src="Store Sale Ad2.png" alt="Ad 2">
+        <img src="Store Sale Ad3.png" alt="Ad 3">
+      </div>
+      <button class="carousel-prev" onclick="moveSlide(-1)">&#10094;</button>
+      <button class="carousel-next" onclick="moveSlide(1)">&#10095;</button>
     </section>
     <section class="recommended-products">
       <div id="mens-shirts"></div>
