update the kategories

--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
           <ul class="dropdown-content">
             <li><a href="#">Men</a>
               <ul>
-                <li><a href="#mens-shirts">mens-shirts</a></li>
-                <li><a href="#mens-shoes">mens-shoes</a></li>
-                <li><a href="#mens-watches">mens-watches</a></li>
+                <li><a href="#mens-shirts" onclick="loadProductsBySubCategory('mens-shirts')">mens-shirts</a></li>
+                <li><a href="#mens-shoes" onclick="loadProductsBySubCategory('mens-shoes')">mens-shoes</a></li>
+                <li><a href="#mens-watches" onclick="loadProductsBySubCategory('mens-watches')">mens-watches</a></li>
               </ul>
             </li>
             <li><a href="#">Women</a>
               <ul>
-                <li><a href="#womens-bags">womens-bags</a></li>
-                <li><a href="#womens-dresses">womens-dresses</a></li>
-                <li><a href="#womens-jewellery">womens-jewellery</a></li>
-                <li><a href="#womens-shoes">womens-shoes</a></li>
-                <li><a href="#womens-watches">womens-watches</a></li>
-                <li><a href="#tops">tops</a></li>
+                <li><a href="#womens-bags" onclick="loadProductsBySubCategory('womens-bags')">womens-bags</a></li>
+                <li><a href="#womens-dresses" onclick="loadProductsBySubCategory('womens-dresses')">womens-dresses</a></li>
+                <li><a href="#womens-jewellery" onclick="loadProductsBySubCategory('womens-jewellery')">womens-jewellery</a></li>
+                <li><a href="#womens-shoes" onclick="loadProductsBySubCategory('womens-shoes')">womens-shoes</a></li>
+                <li><a href="#womens-watches" onclick="loadProductsBySubCategory('womens-watches')">womens-watches</a></li>
+                <li><a href="#tops" onclick="loadProductsBySubCategory('tops')">tops</a></li>
               </ul>
             </li>
             <li><a href="#">Shared</a>
               <ul>
-                <li><a href="#sunglasses">sunglasses</a></li>
+                <li><a href="#sunglasses" onclick="loadProductsBySubCategory('sunglasses')">sunglasses</a></li>
               </ul>
             </li>
           </ul>
@@ -61,40 +61,40 @@
         <li class="dropdown">
           <a href="#">Beauty & Care</a>
           <ul class="dropdown-content">
-            <li><a href="#beauty">beauty</a></li>
-            <li><a href="#skin-care">skin-care</a></li>
-            <li><a href="#fragrances">fragrances</a></li>
+            <li><a href="#beauty" onclick="loadProductsBySubCategory('beauty')">beauty</a></li>
+            <li><a href="#skin-care" onclick="loadProductsBySubCategory('skin-care')">skin-care</a></li>
+            <li><a href="#fragrances" onclick="loadProductsBySubCategory('fragrances')">fragrances</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Technology & Electronics</a>
           <ul class="dropdown-content">
-            <li><a href="#laptops">laptops</a></li>
-            <li><a href="#smartphones">smartphones</a></li>
-            <li><a href="#tablets">tablets</a></li>
-            <li><a href="#mobile-accessories">mobile-accessories</a></li>
+            <li><a href="#laptops" onclick="loadProductsBySubCategory('laptops')">laptops</a></li>
+            <li><a href="#smartphones" onclick="loadProductsBySubCategory('smartphones')">smartphones</a></li>
+            <li><a href="#tablets" onclick="loadProductsBySubCategory('tablets')">tablets</a></li>
+            <li><a href="#mobile-accessories" onclick="loadProductsBySubCategory('mobile-accessories')">mobile-accessories</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Home & Garden</a>
           <ul class="dropdown-content">
-            <li><a href="#furniture">furniture</a></li>
-            <li><a href="#home-decoration">home-decoration</a></li>
-            <li><a href="#kitchen-accessories">kitchen-accessories</a></li>
+            <li><a href="#furniture" onclick="loadProductsBySubCategory('furniture')">furniture</a></li>
+            <li><a href="#home-decoration" onclick="loadProductsBySubCategory('home-decoration')">home-decoration</a></li>
+            <li><a href="#kitchen-accessories" onclick="loadProductsBySubCategory('kitchen-accessories')">kitchen-accessories</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Leisure & Sports</a>
           <ul class="dropdown-content">
-            <li><a href="#sports-accessories">sports-accessories</a></li>
-            <li><a href="#motorcycle">motorcycle</a></li>
-            <li><a href="#vehicle">vehicle</a></li>
+            <li><a href="#sports-accessories" onclick="loadProductsBySubCategory('sports-accessories')">sports-accessories</a></li>
+            <li><a href="#motorcycle" onclick="loadProductsBySubCategory('motorcycle')">motorcycle</a></li>
+            <li><a href="#vehicle" onclick="loadProductsBySubCategory('vehicle')">vehicle</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Food</a>
           <ul class="dropdown-content">
-            <li><a href="#groceries">groceries</a></li>
+            <li><a href="#groceries" onclick="loadProductsBySubCategory('groceries')">groceries</a></li>
           </ul>
         </li>
       </ul>
