update the image

--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
     </div>
   </header>
   <main id="content">
-    
     <section class="trending">
       <h1>Check out the season's biggest trends</h1>
       <div class="trend-categories">
@@ -118,7 +117,30 @@
       <button class="carousel-next" onclick="moveSlide(1)">&#10095;</button>
     </section>
     <section class="recommended-products">
-      <!-- Content will be injected here by JavaScript -->
+      <div id="mens-shirts"></div>
+      <div id="mens-shoes"></div>
+      <div id="mens-watches"></div>
+      <div id="womens-bags"></div>
+      <div id="womens-dresses"></div>
+      <div id="womens-jewellery"></div>
+      <div id="womens-shoes"></div>
+      <div id="womens-watches"></div>
+      <div id="tops"></div>
+      <div id="sunglasses"></div>
+      <div id="beauty"></div>
+      <div id="skin-care"></div>
+      <div id="fragrances"></div>
+      <div id="laptops"></div>
+      <div id="smartphones"></div>
+      <div id="tablets"></div>
+      <div id="mobile-accessories"></div>
+      <div id="furniture"></div>
+      <div id="home-decoration"></div>
+      <div id="kitchen-accessories"></div>
+      <div id="sports-accessories"></div>
+      <div id="motorcycle"></div>
+      <div id="vehicle"></div>
+      <div id="groceries"></div>
     </section>
   </main>
   <footer>
