--- a/index.html
+++ b/index.html
@@ -116,6 +116,24 @@
       <button class="carousel-prev" onclick="moveSlide(-1)">&#10094;</button>
       <button class="carousel-next" onclick="moveSlide(1)">&#10095;</button>
     </section>
+
+    <section class="fashion-category">
+      <h1>Fashion Categories</h1>
+      <div class="sub-categories">
+        <div class="sub-category">
+          <img src="https://img.ltwebstatic.com/images3_ccc/2024/06/25/fd/17193167718fdd5e4f2a80309a449aeab2b29c571f.png" alt="Men" onclick="loadFashionSubCategory('men')">
+          <p>Men</p>
+        </div>
+        <div class="sub-category">
+          <img src="https://img.ltwebstatic.com/images3_abc/2024/06/28/46/17195775357905db597fed0f5595cfbaff38846c92.png" alt="Women" onclick="loadFashionSubCategory('women')">
+          <p>Women</p>
+        </div>
+        <div class="sub-category">
+          <img src="https://img.ltwebstatic.com/images3_abc/2023/02/17/1676605527527814707fcce4ef964c9ea8e9cf0545.png" alt="Shared" onclick="loadFashionSubCategory('shared')">
+          <p>Shared</p>
+        </div>
+      </div>
+    </section>
     <section class="recommended-products">
       <div id="mens-shirts"></div>
       <div id="mens-shoes"></div>
