--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <i class="fas fa-shopping-cart"></i>
         </button>
         <button id="wishlistButton" class="header-icon"><i class="fas fa-heart"></i></button>
+        <button class="categories-toggle header-icon" onclick="toggleCategories()"><i class="fas fa-bars"></i></button>
+
       </div>
     </div>
     <div class="announcement">
@@ -115,32 +117,6 @@
       </div>
       <button class="carousel-prev" onclick="moveSlide(-1)">&#10094;</button>
       <button class="carousel-next" onclick="moveSlide(1)">&#10095;</button>
-    </section>
-    <section class="recommended-products">
-      <div id="mens-shirts"></div>
-      <div id="mens-shoes"></div>
-      <div id="mens-watches"></div>
-      <div id="womens-bags"></div>
-      <div id="womens-dresses"></div>
-      <div id="womens-jewellery"></div>
-      <div id="womens-shoes"></div>
-      <div id="womens-watches"></div>
-      <div id="tops"></div>
-      <div id="sunglasses"></div>
-      <div id="beauty"></div>
-      <div id="skin-care"></div>
-      <div id="fragrances"></div>
-      <div id="laptops"></div>
-      <div id="smartphones"></div>
-      <div id="tablets"></div>
-      <div id="mobile-accessories"></div>
-      <div id="furniture"></div>
-      <div id="home-decoration"></div>
-      <div id="kitchen-accessories"></div>
-      <div id="sports-accessories"></div>
-      <div id="motorcycle"></div>
-      <div id="vehicle"></div>
-      <div id="groceries"></div>
     </section>
   </main>
   <footer>
