update the categories

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         </button>
         <button id="wishlistButton" class="header-icon"><i class="fas fa-heart"></i></button>
         <button class="categories-toggle header-icon" onclick="toggleCategories()"><i class="fas fa-bars"></i></button>
-
       </div>
     </div>
     <div class="navbar">
@@ -131,6 +130,12 @@
           <img src="https://img.ltwebstatic.com/images3_abc/2023/02/17/1676605527527814707fcce4ef964c9ea8e9cf0545.png" alt="Shared" onclick="loadFashionSubCategory('shared')">
           <p>Shared</p>
         </div>
+      </div>
+    </section>
+    <section class="recommended-products">
+      <h1>Recommended Products</h1>
+      <div id="recommended-products-container">
+        <!-- Recommended products will be injected here by JavaScript -->
       </div>
     </section>
   </main>
